force-app/main/default/objects/Supplier_Investigation__c/Supplier_Investigation__c.object-meta.xml
<CustomObject>
    <label>サプライヤー調査</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>サプライヤー調査番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>サプライヤー調査</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>