force-app/main/default/objects/Supplier_Investigation__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <label>サプライヤー対策内容</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>