force-app/main/default/objects/Supplier_Investigation__c/fields/BOM_Part__c.field-meta.xml
<CustomField>
    <fullName>BOM_Part__c</fullName>
    <label>調査対象部品</label>
    <type>Lookup</type>
    <referenceTo>BOM_Part__c</referenceTo>
    <relationshipLabel>サプライヤー調査</relationshipLabel>
    <relationshipName>Supplier_Investigations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>