force-app/main/default/objects/Supplier_Investigation__c/fields/Cause_Category__c.field-meta.xml
<CustomField>
    <fullName>Cause_Category__c</fullName>
    <label>原因区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>材料変更</fullName>
            </value>
            <value>
                <fullName>工程変更</fullName>
            </value>
            <value>
                <fullName>設備故障</fullName>
            </value>
            <value>
                <fullName>人的ミス</fullName>
            </value>
            <value>
                <fullName>検査漏れ</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>