force-app/main/default/objects/Supplier_Investigation__c/fields/Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action__c</fullName>
    <label>是正処置</label>
    <type>Lookup</type>
    <referenceTo>Corrective_Action__c</referenceTo>
    <relationshipLabel>サプライヤー調査</relationshipLabel>
    <relationshipName>Supplier_Investigations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>