force-app/main/default/objects/Supplier_Investigation__c/fields/Evidence_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Attachments__c</fullName>
    <label>証拠資料・添付</label>
    <type>Html</type>
    <length>5000</length>
</CustomField>