force-app/main/default/objects/Supplier_Investigation__c/fields/Impact_Range__c.field-meta.xml
<CustomField>
    <fullName>Impact_Range__c</fullName>
    <label>発生範囲</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>