force-app/main/default/objects/Supplier_Investigation__c/fields/Recurrence_Prevention__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Prevention__c</fullName>
    <label>再発防止策</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>