force-app/main/default/objects/Supplier_Investigation__c/fields/Request_Detail__c.field-meta.xml
<CustomField>
    <fullName>Request_Detail__c</fullName>
    <label>調査依頼内容</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>