force-app/main/default/objects/Supplier_Investigation__c/fields/Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Date__c</fullName>
    <label>回答日</label>
    <type>Date</type>
</CustomField>