force-app/main/default/objects/Supplier_Investigation__c/fields/Response_Detail__c.field-meta.xml
<CustomField>
    <fullName>Response_Detail__c</fullName>
    <label>サプライヤー回答</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>