force-app/main/default/objects/Supplier_Investigation__c/fields/Root_Cause_by_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_by_Supplier__c</fullName>
    <label>サプライヤー特定の根本原因</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>