force-app/main/default/objects/Supplier_Investigation__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>重要度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>重大</fullName>
            </value>
            <value>
                <fullName>重要</fullName>
            </value>
            <value>
                <fullName>軽微</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>