force-app/main/default/objects/Supplier_Investigation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>依頼中</fullName><default>true</default><label>依頼中</label></value>
            <value><fullName>調査中</fullName><default>false</default><label>調査中</label></value>
            <value><fullName>回答済</fullName><default>false</default><label>回答済</label></value>
            <value><fullName>対策実施中</fullName><default>false</default><label>対策実施中</label></value>
            <value><fullName>完了</fullName><default>false</default><label>完了</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>