force-app/main/default/objects/Supplier_Investigation__c/fields/Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact__c</fullName>
    <label>サプライヤー窓口担当者</label>
    <type>Text</type>
    <length>255</length>
</CustomField>