force-app/main/default/objects/Supplier_Investigation__c/fields/Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Verification_Date__c</fullName>
    <label>検証完了日</label>
    <type>Date</type>
</CustomField>