force-app/main/default/objects/Supplier_Investigation__c/fields/Verification_Result__c.field-meta.xml
<CustomField>
    <fullName>Verification_Result__c</fullName>
    <label>検証結果</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>